Modifier Tables des matière

--- a/_pages/en/docs.html
+++ b/_pages/en/docs.html
@@ -4,45 +4,37 @@ ref: Docs
 lang: en
 permalink: /en/docs.html
 ---
+
  <h1 property="name" id="wb-cont">Documentation</h1>
 
-  <div class="row">
-    <nav role="navigation" class="col-md-12">
-      <div class="panel panel-default">
-        <header class="panel-heading">
-          <h2 class="panel-title">Table of contents</h2>
-        </header>
-        <div class="panel-body">
-          <ul class="list-unstyled">
-            <li><a href="#directory_structure"> Directory structure</a>
-              <ul>
-                  <li><a href="#administrations"> Administrations</a></li>
-                  <li><a href="#code"> Code</a></li>
-                  <li><a href="#logiciels_libres-open_source_software"> Logiciels_libres-open_source_software</a></li>
-                  <li><a href="#normes_ouvertes-open_standards"> Normes_ouvertes-open_standards</a></li>
-              </ul>
-           <li><a href="#how_to_add_your_data"> How to add your data</a>
-              <ul>
-                  <li><a href="#adding_your_administration">Adding your administration</a></li>
-                  <li><a href="#adding_open_source_code"> Adding_open_source_code</a>
-                      <ul>
-                          <li><a href="#your_administration_is_already_there"> Your administration is already there</a></li>
-                          <li><a href="#your_administration_needs_to_be_added"> Your administration needs to be added</a>
-                      </ul>
-                  </li>
-                  <li><a href="#adding_open_source_software"> Adding Open Source Software</a>
-                      <ul>
-                          <li><a href="#the_software_is_already_there"> The software is already there</a></li>
-                          <li><a href="#your_open_source_software_needs_to_be_added"> Your open source software needs to be added</a>
-                      </ul>
-                  </li>
-              </ul>
-            </li>
-          </ul>
-        </div>
+<div class="row">
+  <nav role="navigation" class="col-md-12">
+    <div class="panel panel-default">
+      <header class="panel-heading">
+        <h2 class="panel-title">Table of contents</h2>
+      </header>
+      <div class="panel-body">
+        <ul class="list-unstyled">
+          <li><a href="#directory_structure">Directory structure</a>
+            <ul>
+              <li><a href="#administrations">Administrations</a></li>
+              <li><a href="#code">Code</a></li>
+              <li><a href="#logiciels_libres-open_source_software">Logiciels_libres-open_source_software</a></li>
+              <li><a href="#normes_ouvertes-open_standards">Normes_ouvertes-open_standards</a></li>
+            </ul>
+          </li>
+          <li><a href="#how_to_add_your_data">How to add your data</a>
+            <ul>
+              <li><a href="#adding_your_administration">Adding your administration</a></li>
+              <li><a href="#adding_open_source_code">Adding_open_source_code</a></li>
+              <li><a href="#adding_open_source_software">Adding Open Source Software</a></li>
+            </ul>
+          </li>
+        </ul>
       </div>
-    </nav>
-  </div>
+    </div>
+  </nav>
+</div>
   
 <h2 id="directory_structure">Directory structure</h2>
 
