--- a/_pages/fr/docs.html
+++ b/_pages/fr/docs.html
@@ -8,42 +8,33 @@ permalink: fr/docs.html
 <h1 property="name" id="wb-cont">Documentation</h1>
 
 <div class="row">
-    <nav role="navigation" class="col-md-12">
-      <div class="panel panel-default">
-        <header class="panel-heading">
-          <h2 class="panel-title">Table des matières</h2>
-        </header>
-        <div class="panel-body">
-          <ul class="list-unstyled">
-            <li><a href="#Structure_du_repertoire"> Structure du répertoire</a>
-              <ul>
-                  <li><a href="#administrations"> Administrations</a></li>
-                  <li><a href="#code"> Code</a></li>
-                  <li><a href="#logiciels_libres-open_source_software"> Logiciels_libres-open_source_software</a></li>
-                  <li><a href="#normes_ouvertes-open_standards"> Normes_ouvertes-open_standards</a></li>
-              </ul>
-           <li><a href="#Comment_ajouter_vos_donnees"> Comment ajouter vos données</a>
-              <ul>
-                  <li><a href="#Ajouter_votre_administration">Ajouter votre administration</a></li>
-                  <li><a href="#Ajout_de_codes_Open_Source"> Ajout de codes Open Source</a>
-                      <ul>
-                          <li><a href="#Votre_administration_est_deja_la"> Votre administration est déjà là</a></li>
-                          <li><a href="#Votre_administration_doit_etre_ajoute"> Votre administration doit être ajouté</a>
-                      </ul>
-                  </li>
-                  <li><a href="#Ajout_de_logiciels_Open_Source"> Ajout de logiciels Open Source</a>
-                      <ul>
-                          <li><a href="#Le_logiciel_est_deja_la"> Le logiciel est déjà là</a></li>
-                          <li><a href="#Votre_logiciel_open_source_doit_etre_ajoute"> Votre logiciel open source doit être ajouté</a>
-                      </ul>
-                  </li>
-              </ul>
-            </li>
-          </ul>
-        </div>
+  <nav role="navigation" class="col-md-12">
+    <div class="panel panel-default">
+      <header class="panel-heading">
+        <h2 class="panel-title">Table des matières</h2>
+      </header>
+      <div class="panel-body">
+        <ul class="list-unstyled">
+          <li><a href="#Structure_du_repertoire">Structure du répertoire</a>
+            <ul>
+              <li><a href="#administrations">Administrations</a></li>
+              <li><a href="#code">Code</a></li>
+              <li><a href="#logiciels_libres-open_source_software">Logiciels_libres-open_source_software</a></li>
+              <li><a href="#normes_ouvertes-open_standards">Normes_ouvertes-open_standards</a></li>
+            </ul>
+          </li>
+          <li><a href="#Comment_ajouter_vos_donnees">Comment ajouter vos données</a>
+            <ul>
+              <li><a href="#Ajouter_votre_administration">Ajouter votre administration</a></li>
+              <li><a href="#Ajout_de_codes_Open_Source">Ajout de codes Open Source</a></li>
+              <li><a href="#Ajout_de_logiciels_Open_Source">Ajout de logiciels Open Source</a></li>
+            </ul>
+          </li>
+        </ul>
       </div>
-    </nav>
-  </div>
+    </div>
+  </nav>
+</div>
 
 <h2 id="Structure_du_repertoire">Structure du répertoire</h2>
 
