Update open source code texts

--- a/_pages/fr/code-source-ouvert.html
+++ b/_pages/fr/code-source-ouvert.html
@@ -6,10 +6,12 @@ permalink: /fr/code-source-ouvert.html
 ---
 
 <h1 property="name" id="wb-cont">Code source ouvert</h1>
-<p>Les données utilisées pour générer cette liste est hébergé sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Créez des <i>Pull Requests</i> pour ajouter ou mettre à jour de l'information sur le code source ouvert des administrations fédérale, provinciales, territoriales et municipales du Canada. Les données sont aussi disponible en <a href="../code.json" target="_blank">format JSON</a>.</p>
-
-<p>Vous pouvez aussi consulter la liste des <a href="./code-source-ouvert-groupes.html">Groupes de code source ouvert</a> pour trouver plus de projets libres et dépôts de code d'administrations publiques Canadiennes.</p>
-
-<p>Si vous êtes intéressé à contribuer avec nous, veuillez remplir <a href="./code-source-ouvert-formulaire.html">le formulaire de code source ouvert</a>. <a href="./code-source-ouvert-schema.html">Le schéma de métadonnées</a> peut également vous aider à valider le formulaire.</p>
+<p>Projets libres et dépôts de code des administrations publiques Canadiennes.</p>
+<p>Consultez la liste des <a href="./code-source-ouvert-groupes.html">Groupes de code source ouvert</a> pour trouver plus de projets libres et dépôts de code source ouvert d'administrations publiques Canadiennes.</p>
+<p>Consultez la <a href="./docs.html">Documentation</a> et le <a href="./code-source-ouvert-schema.html">Schéma de métadonnées du code source ouvert</a> pour la liste des champs et comment ajouter vos données.</p>
 
 {% include codeTable.html %}
+
+<p>Les données utilisées pour générer cette liste sont hébergé sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Créez des <i>Pull Requests</i> pour ajouter ou mettre à jour de l'information sur le code source ouvert des administrations fédérale, provinciales, territoriales et municipales du Canada.</p>
+<p>Vous pouvez utiliser le <a href="./open-source-code-form.html">Formulaire de code source ouvert</a> pour mettre à jours des données existantes.</p>
+<p>Les données sont aussi rendu disponible en <a href="../code.json" target="_blank">format JSON</a> pour utilisation dans d'autres applications.</p>
