--- a/_pages/fr/code-source-ouvert.html
+++ b/_pages/fr/code-source-ouvert.html
@@ -13,5 +13,5 @@ permalink: /fr/code-source-ouvert.html
 {% include codeTable.html %}
 
 <p>Les données utilisées pour générer cette liste sont hébergé sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Créez des <i>Pull Requests</i> pour ajouter ou mettre à jour de l'information sur le code source ouvert des administrations fédérale, provinciales, territoriales et municipales du Canada.</p>
-<p>Vous pouvez utiliser le <a href="./open-source-code-form.html">Formulaire de code source ouvert</a> pour mettre à jours des données existantes.</p>
+<p>Vous pouvez utiliser le <a href="./code-source-ouvert-formulaire.html">Formulaire de code source ouvert</a> pour mettre à jours des données existantes.</p>
 <p>Les données sont aussi rendu disponible en <a href="../code.json" target="_blank">format JSON</a> pour utilisation dans d'autres applications.</p>
