--- a/_pages/en/open-source-software-schema.html
+++ b/_pages/en/open-source-software-schema.html
@@ -12,3 +12,5 @@ permalink: /en/open-source-software-schema.html
 <h2>Version "~" </h2>
 <p>Mandatory fields are marked with "<span class="bg-primary">mandatory</span>".</p>
 <p>We've created an <a href="https://raw.githubusercontent.com/canada-ca/ore-ero/master/_data_templates/ll-oss_mandatory.yml" target="_blank">example file</a> with only mandatory fields you can use to get started.</p>
+
+{% include ossSchema.html %}
