--- a/_pages/en/open-source-software-schema.html
+++ b/_pages/en/open-source-software-schema.html
@@ -9,7 +9,7 @@ permalink: /en/open-source-software-schema.html
 <p>The metadata schema for <a href="./open-source-software.html">Open Source Software</a>.</p>
 <p>Data files are hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>.</p>
 
-<h2>Version "~" </h2>
+<h2>Version "1.0" </h2>
 <p>Mandatory fields are marked with "<span class="bg-primary">mandatory</span>".</p>
 <p>We've created an <a href="https://raw.githubusercontent.com/canada-ca/ore-ero/master/_data_templates/ll-oss_mandatory.yml" target="_blank">example file</a> with only mandatory fields you can use to get started.</p>
 
