update oss page

--- a/_pages/en/open-source-software.html
+++ b/_pages/en/open-source-software.html
@@ -6,6 +6,11 @@ permalink: /en/open-source-software.html
 ---
 
 <h1 property="name" id="wb-cont">Open Source Software</h1>
-<p>The data used to generate this list is hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Create Pull Requests to add or update information on Open Source software used in Canadian federal, provincial, territorial and municipal administrations. Data is also available in <a href="../logiciels_libres-open_source_software.json" target="_blank">JSON format</a>.</p>
+<p>Canadian public administrations' open source software.</p>
+<p>See the <a href="./docs.html">Documentation</a> and <a href="./open-source-software-schema.html">Open Source Software Metadata Schema</a> for the list of fields and how to add you data.</p>
 
 {% include ossTable.html %}
+
+<p>The data used to generate this list is hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Create Pull Requests to add or update information on Canadian administrations Open Source Software.</p>
+<p>You can use the <a href="#">Open Source Software Form</a> to update existing data.</p>
+<p>Data is also made available in <a href="../logiciels_libres-open_source_software.json" target="_blank">JSON format</a> for open data and use in other applications.</p>
