--- a/_pages/fr/logiciels-libres.html
+++ b/_pages/fr/logiciels-libres.html
@@ -6,6 +6,10 @@ permalink: /fr/logiciels-libres.html
 ---
 
 <h1 property="name" id="wb-cont">Logiciels libres</h1>
-<p>Les données utilisées pour générer cette liste est hébergé sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Créez des <i>Pull Requests</i> pour ajouter ou mettre à jour de l'information sur les logiciels libres utilisés par les administrations fédérale, provinciales, territoriales et municipales du Canada. Les données sont aussi disponible en <a href="../logiciels_libres-open_source_software.json" target="_blank">format JSON</a>.</p>
+<p>Logiciels libres des administrations publiques Canadiennes.</p>
+<p>Consultez la <a href="./docs.html">Documentation</a> et le <a href="./logiciels-libres-schema.html">Schéma de métadonnées de logiciels libres ouverts</a> pour la liste des champs et comment ajouter vos données.</p>
 
 {% include ossTable.html %}
+<p>Les données utilisées pour générer cette liste sont hébergé sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Créez des <i>Pull Requests</i> pour ajouter ou mettre à jour de l'information sur les logiciels ouverts des administrations du Canada.</p>
+<p>Vous pouvez utiliser le <a href="#">Formulaire de logiciels libres ouverts</a> pour mettre à jours des données existantes.</p>
+<p>Les données sont aussi rendu disponible en <a href="../logiciels_libres-open_source_software.json" target="_blank">format JSON</a> pour utilisation dans d'autres applications.</p>
