--- a/_pages/en/open-source-code-schema.html
+++ b/_pages/en/open-source-code-schema.html
@@ -5,8 +5,7 @@ lang: en
 permalink: /en/open-source-code-schema.html
 ---
 
-<h1 property="name" id="wb-cont">Metadata Schema for Open Source Code</h1>
-<p>The metadata schema for <a href="./open-source-code.html">Open Source Code</a>.</p>
+<h1 property="name" id="wb-cont">Open Source Code Metadata Schema</h1>
 <p>Data files are hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>.</p>
 
 <h2>Version 1.0</h2>
