--- a/_pages/fr/logiciels-libres-formulaire.html
+++ b/_pages/fr/logiciels-libres-formulaire.html
@@ -6,6 +6,6 @@ permalink: /fr/logiciels-libres-formulaire.html
 ---
 
 <h1 property="name" id="wb-cont">Formulaire avec validation de logiciel libre ouvert</h1>
-<p>Appuyez <a href="logiciel-libre-schema.html">ici</a> pour en savoir plus sur le schéma de métadonnées pour les logiciels libres ouvert.</p>
+<p>Appuyez <a href="logiciels-libres-schema.html">ici</a> pour en savoir plus sur le schéma de métadonnées pour les logiciels libres ouvert.</p>
 
 {% include softwareForm.html %}
