Rename and sufolders form components

--- a/_pages/en/open-standards-form.html
+++ b/_pages/en/open-standards-form.html
@@ -8,4 +8,4 @@ permalink: /en/open-standards-form.html
 <h1 property="name" id="wb-cont">Form with validation for open standards</h1>
 <p>Click <a href="open-standards-schema.html">here</a> to know more informations about the metadata schema for open source code.</p>
 
-{% include openStandardsForm.html %}
+{% include standardsForm.html %}
