--- a/_pages/en/open-standards-schema.html
+++ b/_pages/en/open-standards-schema.html
@@ -12,3 +12,5 @@ permalink: /en/open-standards-schema.html
 <h2>Version "~"</h2>
 <p>Mandatory fields are marked with "<span class="bg-primary">mandatory</span>".</p>
 <p>We've created an <a href="#" target="_blank">example file</a> with only mandatory fields you can use to get started.</p>
+
+{% include standardsSchema.html %}
