--- a/_pages/fr/normes-ouvertes-schema.html
+++ b/_pages/fr/normes-ouvertes-schema.html
@@ -12,3 +12,5 @@ permalink: /fr/normes-ouvertes-schema.html
 <h2>Version "~" </h2>
 <p>Les champs obligatoires sont marqués avec "<span class="bg-primary">obligatoire</span>".</p>
 <p>Nous avons créé un <a href="#" target="_blank">fichier exemple</a> avec seulement les champs obligatoires que vous pouvez utiliser pour commencer.</p>
+
+{% include standardsSchema.html %}
