--- a/_pages/en/open-source-software-form.html
+++ b/_pages/en/open-source-software-form.html
@@ -8,4 +8,4 @@ permalink: /en/open-source-software-form.html
 <h1 property="name" id="wb-cont">Form with validation for open source software</h1>
 <p>Click <a href="open-source-software-schema.html">here</a> to know more informations about the metadata schema for open source software.</p>
 
-{% include softwareForm.html %}
+{% include ossForm.html %}
