--- a/_pages/en/open-standards.html
+++ b/_pages/en/open-standards.html
@@ -8,7 +8,7 @@ permalink: /en/open-standards.html
 <h1 property="name" id="wb-cont">Open Standards</h1>
 <p>The data used to generate this list is hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Create Pull Requests to add or update information on open standards used in Canadian federal, provincial, territorial and municipal administrations. Data is also available in <a href="../normes_ouvertes-open_standards.json" target="_blank">JSON format</a>.</p>
 
-{% include openStandardsTable.html %}
+{% include standardsTable.html %}
 
 <p>You can use the <a href="./open-standards-form.html">Open Standard Form</a> to update existing data.</p>
 <p>Data is also made available in <a href="../normes_ouvertes-open_standards.json" target="_blank">JSON format</a> for open standard and use in other applications.</p>
