--- a/_pages/fr/normes-ouvertes-formulaire.html
+++ b/_pages/fr/normes-ouvertes-formulaire.html
@@ -8,4 +8,4 @@ permalink: /fr/normes-ouvertes-formulaire.html
 <h1 property="name" id="wb-cont">Formulaire avec validation des normes ouvertes</h1>
 <p>Appuyez <a href="normes-ouvertes-schema.html">ici</a> pour en savoir plus sur le schéma de métadonnées pour les normes ouvertes.</p>
 
-{% include openStandardsForm.html %}
+{% include standardsForm.html %}
