--- a/_pages/en/open-source-code-admin-form.html
+++ b/_pages/en/open-source-code-admin-form.html
@@ -5,7 +5,7 @@ lang: en
 permalink: /en/open-source-code-admin-form.html
 ---
 
-<h1 property="name" id="wb-cont">Form with validation for open source code</h1>
+<h1 property="name" id="wb-cont">Form with validation for organizations</h1>
 <p>Click <a href="open-source-code-schema.html">here</a> to know more informations about the metadata schema for open source code.</p>
 
 {% include adminCodeForm.html %}
