--- a/_pages/en/open-standards.html
+++ b/_pages/en/open-standards.html
@@ -7,6 +7,7 @@ permalink: /en/open-standards.html
 
 <h1 property="name" id="wb-cont">Open Standards</h1>
 <p>The data used to generate this list is hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Create Pull Requests to add or update information on open standards used in Canadian federal, provincial, territorial and municipal administrations. Data is also available in <a href="../normes_ouvertes-open_standards.json" target="_blank">JSON format</a>.</p>
+<p>See the <a href="./docs.html">Documentation</a> and <a href="./open-standards-schema.html">Open Source Code Metadata Schema</a> for the list of fields and how to add you data.</p>
 
 {% include standardsTable.html %}
 
