--- a/_pages/en/admin-form.html
+++ b/_pages/en/admin-form.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-ref: adminCodeForm
+ref: adminForm
 lang: en
-permalink: /en/open-source-code-admin-form.html
+permalink: /en/admin-form.html
 ---
 
 <h1 property="name" id="wb-cont">Form with validation for organizations</h1>
 <p>Click <a href="open-source-code-schema.html">here</a> to know more informations about the metadata schema for open source code.</p>
 
-{% include adminCodeForm.html %}
+{% include adminForm.html %}
