--- a/_pages/fr/admin-formulaire.html
+++ b/_pages/fr/admin-formulaire.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-ref: adminCodeForm
+ref: adminForm
 lang: fr
-permalink: /fr/code-source-ouvert-admin-formulaire.html
+permalink: /fr/admin-formulaire.html
 ---
 
 <h1 property="name" id="wb-cont">Formulaire avec validation des organisations</h1>
 <p>Appuyez <a href="code-source-ouvert-schema.html">ici</a> pour en savoir plus sur le schéma de métadonnées pour le code source ouvert.</p>
 
-{% include adminCodeForm.html %}
+{% include adminForm.html %}
